--- a/src/main/resources/static/assets/css/checkout.css
+++ b/src/main/resources/static/assets/css/checkout.css
@@ -1,23 +1,38 @@
-body {
-    background: #f5f5f5
+.container-check {
+    height: 100vh;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    width: 100vw;
+    align-items: center;
 }
-
-.rounded {
-    border-radius: 1rem
+img.bg-payment {
+    height: 100vh;
+    object-fit: cover;
 }
-
-.nav-pills .nav-link {
-    color: #555
+button.stripe-button-el {
+    position: relative;
+    width: 200px;
+    top: -160px;
+    right: 400%;
+    height: 100px;
+    background: #e2ce24;
+    border: 6px solid #159429;
 }
-
-.nav-pills .nav-link.active {
-    color: white
+button.stripe-button-el span{
+    display: block;
+    min-height: 30px;
+    background: #e2ce24;
+    border-color: transparent;
+    outline: none;
+    font-size: 22px;
+    color: #000;
 }
-
-input[type="radio"] {
-    margin-right: 5px
-}
-
-.bold {
-    font-weight: bold
+img.bg-home {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    object-fit: contain;
+    top: 8%;
+    left: 3%;
 }
