--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -179,7 +179,8 @@
                                 <a th:if="${isLogined == false}" th:href="@{/login}">
                                     <span style="font-size:13px !important; text-transform: uppercase">Đăng nhập</span>
                                 </a>
-                                <a th:if="${isLogined == true}" th:href="@{/get-customer-page}"><i class="fa fa-user"></i>
+                                <a th:if="${isLogined == true}" th:href="@{/get-customer-page}"><i
+                                        class="fa fa-user"></i>
                                 </a>
                             </div>
                             <div class="mini_cart_wrapper">
@@ -188,7 +189,7 @@
                                 </a>
                             </div>
                             <div th:if="${isLogined == true}" style="margin-left: 20px" class="header_wishlist">
-                                <a  th:href="@{/logout}">
+                                <a th:href="@{/logout}">
                                     <span style="font-size:13px !important; text-transform: uppercase">Đăng xuất</span>
                                 </a>
                             </div>
@@ -398,16 +399,16 @@
                             </div>
                         </div>
                     </div>
-<!--                    <div class="tab-pane fade" id="bestseller" role="tabpanel">-->
-<!--                        <div class="row">-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="tab-pane fade" id="featured" role="tabpanel">-->
-<!--                        <div class="row">-->
-<!--                            <div class="product_carousel product_column5 owl-carousel">-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                    <!--                    <div class="tab-pane fade" id="bestseller" role="tabpanel">-->
+                    <!--                        <div class="row">-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
+                    <!--                    <div class="tab-pane fade" id="featured" role="tabpanel">-->
+                    <!--                        <div class="row">-->
+                    <!--                            <div class="product_carousel product_column5 owl-carousel">-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -847,26 +848,26 @@
                         </ul>
                     </div>
                 </div>
-<!--                <div class="col-lg-7 col-md-8">-->
-<!--                    <div class="newsletter_area">-->
-<!--                        <div class="newsletter_text">-->
-<!--                            <h2>Newsletter</h2>-->
-<!--                        </div>-->
-<!--                        <div class="subscribe_form">-->
-<!--                            <form id="mc-form" class="mc-form footer-newsletter">-->
-<!--                                <input id="mc-email" type="email" autocomplete="off"-->
-<!--                                       placeholder="Enter your e-mail"/>-->
-<!--                                <button id="mc-submit">Subscribe</button>-->
-<!--                            </form>-->
-<!--                            &lt;!&ndash; mailchimp-alerts Start &ndash;&gt;-->
-<!--                            <div class="mailchimp-alerts text-centre">-->
-<!--                                <div class="mailchimp-submitting"></div>&lt;!&ndash; mailchimp-submitting end &ndash;&gt;-->
-<!--                                <div class="mailchimp-success"></div>&lt;!&ndash; mailchimp-success end &ndash;&gt;-->
-<!--                                <div class="mailchimp-error"></div>&lt;!&ndash; mailchimp-error end &ndash;&gt;-->
-<!--                            </div>&lt;!&ndash; mailchimp-alerts end &ndash;&gt;-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
+                <!--                <div class="col-lg-7 col-md-8">-->
+                <!--                    <div class="newsletter_area">-->
+                <!--                        <div class="newsletter_text">-->
+                <!--                            <h2>Newsletter</h2>-->
+                <!--                        </div>-->
+                <!--                        <div class="subscribe_form">-->
+                <!--                            <form id="mc-form" class="mc-form footer-newsletter">-->
+                <!--                                <input id="mc-email" type="email" autocomplete="off"-->
+                <!--                                       placeholder="Enter your e-mail"/>-->
+                <!--                                <button id="mc-submit">Subscribe</button>-->
+                <!--                            </form>-->
+                <!--                            &lt;!&ndash; mailchimp-alerts Start &ndash;&gt;-->
+                <!--                            <div class="mailchimp-alerts text-centre">-->
+                <!--                                <div class="mailchimp-submitting"></div>&lt;!&ndash; mailchimp-submitting end &ndash;&gt;-->
+                <!--                                <div class="mailchimp-success"></div>&lt;!&ndash; mailchimp-success end &ndash;&gt;-->
+                <!--                                <div class="mailchimp-error"></div>&lt;!&ndash; mailchimp-error end &ndash;&gt;-->
+                <!--                            </div>&lt;!&ndash; mailchimp-alerts end &ndash;&gt;-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                </div>-->
             </div>
         </div>
     </div>
